
  Bug fixes:
  * If apt-get fails when installing test dependencies and apt
    pinning is in use, also retry without pinning. This was already done in
    the case of apt-get succeeding but removing our "satdep" dummy package
    (the common case), but this does not cover upgrades of Priority: >=
    important packages which make apt-get exit with non-zero.

 -- Martin Pitt <mpitt@debian.org>  Wed, 09 Dec 2015 12:47:21 +0100

autopkgtest (3.18.2) unstable; urgency=medium

  [ Martin Pitt ]
  * tools/adt-build-lxc: Install libpam-systemd; some tests expect to have an
    $XDG_RUNTIME_DIR.
  * Fix --apt-pocket=proposed=pkgname.. to set up the apt pinning before
    running setup-commands (in particular, dist-upgrade), as otherwise the
    dist-ugprade will install package versions that conflict with the pinning.
    Change --apt-pocket to download (only) the apt indexes for the given
    pocket, so that we can set up the pinning correctly.
  * ssh-setup-nova: Separately track server UUID, to avoid resetting the
    originally given --name on testbed revert.
  * If apt-get fails for --apt-pocket ("Hash sum mismatch"!), retry up to
    three times.
  * Fix parsing of "apt-cache showsrc" to not get broken by wrapped lines.
    Thanks Andy Whitcroft! (LP: #1522469)
  * Don't try to "cd ." on testbeds in source rules commands, as this might be
    inaccessible in some cases. Default to '/' instead. Thanks Christopher
    Baine!
  * ssh-setup/nova: Treat --image value as a regexp pattern and use the
    greatest (by string sorting) result. This avoids having to put date stamps
    into the command line, and also avoids completely falling over if two
    images have the same name.
  * Add a new ssh setup script command "debug-failure" which is called when
    the setup script fails with nonzero or on timeouts waiting for ssh or
    reboot.
  * ssh-setup/nova: Implement "debug-failure" command with "nova console-log".